tests/fixtures/functional_patterns/negative/n35_result_is_ok.rs
fn is_success(res: Result<i32, String>) -> bool {
    res.is_ok()
}
